--- a/src/styles/utilities/_typography.scss
+++ b/src/styles/utilities/_typography.scss
@@ -32,135 +32,131 @@
 * @param {string} $size - The size of the text.
 */ 
 @mixin text-size($size) {
-  & {
     @if map.has-key(VAR.$font-sizes, $size) {
       font-size: map.get(VAR.$font-sizes, $size);
     } @else {
       font-size: $size;
     }
-  }
 }
 
 // Font weights
-@mixin font-thin { & { font-weight: 100; } }
-@mixin font-extralight { & { font-weight: 200; } }
-@mixin font-light { & { font-weight: 300; } }
-@mixin font-normal { & { font-weight: 400; } }
-@mixin font-medium { & { font-weight: 500; } }
-@mixin font-semibold { & { font-weight: 600; } }
-@mixin font-bold { & { font-weight: 700; } }
-@mixin font-extrabold { & { font-weight: 800; } }
-@mixin font-black { & { font-weight: 900; } }
+@mixin font-thin { font-weight: 100; }
+@mixin font-extralight { font-weight: 200; }
+@mixin font-light { font-weight: 300; }
+@mixin font-normal { font-weight: 400; }
+@mixin font-medium { font-weight: 500; }
+@mixin font-semibold { font-weight: 600; }
+@mixin font-bold { font-weight: 700; }
+@mixin font-extrabold { font-weight: 800; }
+@mixin font-black { font-weight: 900; }
 
 
 @mixin leading($value){
-  & {
-    @if meta.type-of($value) == 'number' {
-      line-height: $value;
-    } @else if $value == 'none' {
-      line-height: 1;
-    } @else if $value == 'tight' {
-      line-height: 1.25;
-    } @else if $value == 'snug' {
-      line-height: 1.375;
-    } @else if $value == 'normal' {
-      line-height: 1.5;
-    } @else if $value == 'relaxed' {
-      line-height: 1.625;
-    } @else if $value == 'loose' {
-      line-height: 2;
-    } @else {
-      line-height: $value;
-    }
+  @if meta.type-of($value) == 'number' {
+    line-height: $value;
+  } @else if $value == 'none' {
+    line-height: 1;
+  } @else if $value == 'tight' {
+    line-height: 1.25;
+  } @else if $value == 'snug' {
+    line-height: 1.375;
+  } @else if $value == 'normal' {
+    line-height: 1.5;
+  } @else if $value == 'relaxed' {
+    line-height: 1.625;
+  } @else if $value == 'loose' {
+    line-height: 2;
+  } @else {
+    line-height: $value;
   }
 }
 
 // Line heights
-@mixin leading-none { & { @include leading(none);} }
-@mixin leading-tight { & { @include leading(tight);} }
-@mixin leading-snug { & { @include leading(snug);} }
-@mixin leading-normal { & { @include leading(normal);} }
-@mixin leading-relaxed { & { @include leading(relaxed);} }
-@mixin leading-loose { & { @include leading(loose);} }
+@mixin leading-none { @include leading(none);} 
+@mixin leading-tight { @include leading(tight);} 
+@mixin leading-snug { @include leading(snug);} 
+@mixin leading-normal { @include leading(normal);} 
+@mixin leading-relaxed { @include leading(relaxed);} 
+@mixin leading-loose { @include leading(loose);} 
 
 // Text alignment
-@mixin text-left { & { text-align: left; } }
-@mixin text-center { & { text-align: center; } }
-@mixin text-right { & { text-align: right; } }
-@mixin text-justify { & { text-align: justify; } }
+@mixin text-left { text-align: left; }
+@mixin text-center { text-align: center; }
+@mixin text-right { text-align: right; }
+@mixin text-justify { text-align: justify; }
 
 
 // Text transform mixins
-@mixin uppercase { & { text-transform: uppercase; } }
-@mixin lowercase { & { text-transform: lowercase; } }
-@mixin capitalize { & { text-transform: capitalize; } }
-@mixin normal-case { & { text-transform: none; } }
+@mixin uppercase { text-transform: uppercase; }
+@mixin lowercase { text-transform: lowercase; }
+@mixin capitalize { text-transform: capitalize; }
+@mixin normal-case { text-transform: none; }
 
 // Font style mixins
-@mixin italic { & { font-style: italic; } }
-@mixin not-italic { & { font-style: normal; } }
+@mixin italic { font-style: italic; } 
+@mixin not-italic { font-style: normal; } 
 
 // Text decoration mixins
-@mixin underline { & { text-decoration: underline; } }
-@mixin line-through { & { text-decoration: line-through; } }
-@mixin no-underline { & { text-decoration: none; } }
+@mixin underline { text-decoration: underline; } 
+@mixin line-through { text-decoration: line-through; } 
+@mixin no-underline { text-decoration: none; } 
 
 // Text overflow mixin
 @mixin truncate { 
-  & { 
-    overflow: hidden; 
-    text-overflow: ellipsis; 
-    white-space: nowrap; 
-  } 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+  white-space: nowrap; 
+}
+
+@mixin overflow-label {
+  white-space: nowrap;
+  word-break: break-all;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  min-width: 0;
 }
 
 @mixin truncate-lines($lines: 2) {
-  & {
-    display: -webkit-box;
-    -webkit-line-clamp: $lines;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
-    text-overflow: ellipsis;
-  }
+  display: -webkit-box;
+  -webkit-line-clamp: $lines;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 
 @mixin break-normal {
-  & {
-    overflow-wrap: normal;
-    word-break: normal;
-  }
+  overflow-wrap: normal;
+  word-break: normal;
 }
 
-@mixin break-words { & {overflow-wrap: break-word; }}
-@mixin break-all { & {word-break: break-all; }}
-@mixin whitespace-normal { & {white-space: normal; }}
-@mixin whitespace-nowrap { & {white-space: nowrap; }}
-@mixin whitespace-pre { & {white-space: pre; }}
-@mixin whitespace-pre-line { & {white-space: pre-line; }}
-@mixin whitespace-pre-wrap { & {white-space: pre-wrap; }}
+@mixin break-words { overflow-wrap: break-word; }
+@mixin break-all { word-break: break-all; }
+@mixin whitespace-normal { white-space: normal; }
+@mixin whitespace-nowrap { white-space: nowrap; }
+@mixin whitespace-pre { white-space: pre; }
+@mixin whitespace-pre-line { white-space: pre-line; }
+@mixin whitespace-pre-wrap { white-space: pre-wrap; }
 
 
 // Custom letter spacing mixin with value
 @mixin tracking($value) {
-  & {
-    @if meta.type-of($value) == 'number' {
-      letter-spacing: $value;
-    } @else if $value == 'tighter' {
-      letter-spacing: -0.05em;
-    } @else if $value == 'tight' {
-      letter-spacing: -0.025em;
-    } @else if $value == 'normal' {
-      letter-spacing: 0;
-    } @else if $value == 'wide' {
-      letter-spacing: 0.025em;
-    } @else if $value == 'wider' {
-      letter-spacing: 0.05em;
-    } @else if $value == 'widest' {
-      letter-spacing: 0.1em;
-    } @else {
-      letter-spacing: $value;
-    }
+  @if meta.type-of($value) == 'number' {
+    letter-spacing: $value;
+  } @else if $value == 'tighter' {
+    letter-spacing: -0.05em;
+  } @else if $value == 'tight' {
+    letter-spacing: -0.025em;
+  } @else if $value == 'normal' {
+    letter-spacing: 0;
+  } @else if $value == 'wide' {
+    letter-spacing: 0.025em;
+  } @else if $value == 'wider' {
+    letter-spacing: 0.05em;
+  } @else if $value == 'widest' {
+    letter-spacing: 0.1em;
+  } @else {
+    letter-spacing: $value;
   }
 }
 
@@ -230,6 +226,8 @@
   .tracking-wide#{$suffix} { @include tracking(wide) };
   .tracking-wider#{$suffix} { @include tracking(wider) };
   .tracking-widest#{$suffix} { @include tracking(widest) };
+  
+  .overflow-label#{$suffix}{@include overflow-label};
 }
 
 @if VAR.$generate-utility-classes {
@@ -244,12 +242,11 @@
   .whitespace-pre-wrap { @include whitespace-pre-wrap; }
 
   @each $breakpoint, $width in VAR.$breakpoints {
-      @media (min-width: #{$width}) {
-          @each $size, $val in VAR.$font-sizes {
-              .text-#{$size}\@#{$breakpoint} { @include text-size($size); }
-          }
-          @include responsive-typography($breakpoint);
+    @media (min-width: #{$width}) {
+      @each $size, $val in VAR.$font-sizes {
+        .text-#{$size}\@#{$breakpoint} { @include text-size($size); }
       }
+      @include responsive-typography($breakpoint);
+    }
   }
-
 }
