mouse cursor classes added

--- a/src/styles/utilities/_index.scss
+++ b/src/styles/utilities/_index.scss
@@ -6,6 +6,7 @@
 @forward "borders";
 @forward "colors";
 @forward "container-queries";
+@forward "cursor";
 @forward "display";
 @forward "helpers";
 @forward "media-queries";
