moved theme at bottom to overwrite defaults

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,13 +4,16 @@
 // Import base styles
 @forward "base";
 
-// Import themes
-@forward "themes";
 
 // Import layout components
 @forward "layouts";
 
 // Import utilities based on configuration
 @forward "utilities";
+
+
+
+// Import themes near bottom for overrides
+@forward "themes";
 
 @forward "./mixins-map";
