--- a/src/styles/themes/_theme.scss
+++ b/src/styles/themes/_theme.scss
@@ -54,32 +54,34 @@
     scrollbar-width: thin;
     scrollbar-color: #888 var(--background);
   }
+  
+  @if $enable-dark-mode {
+    // Dark theme settings
+    [data-theme="dark"] {
+      --background: #{map.get($dark-theme, "background")};
+      --foreground: #{map.get($dark-theme, "foreground")};
+      --surface: #{map.get($dark-theme, "surface")};
+      --border: var(--gray-400);
+      --text-primary: var(--gray-100);
+      --text-secondary: var(--gray-400);
+      --button-bg-color: var(--primary);
+      --button-bg-color-hover: var(--primary-400);
+      --button-text-color: var(--gray-200);
+      --link-color: var(--primary);
+      --link-hover-color: var(--primary-400);
+      --inverted-text-color: var(--gray-900);
 
-  // Dark theme settings
-  [data-theme="dark"] {
-    --background: #{map.get($dark-theme, "background")};
-    --foreground: #{map.get($dark-theme, "foreground")};
-    --surface: #{map.get($dark-theme, "surface")};
-    --border: var(--gray-400);
-    --text-primary: var(--gray-100);
-    --text-secondary: var(--gray-400);
-    --button-bg-color: var(--primary);
-    --button-bg-color-hover: var(--primary-400);
-    --button-text-color: var(--gray-200);
-    --link-color: var(--primary);
-    --link-hover-color: var(--primary-400);
-    --inverted-text-color: var(--gray-900);
+      &::-webkit-scrollbar-track {
+        background: var(--background);
+      }
 
-    &::-webkit-scrollbar-track {
-      background: var(--background);
+      &::-webkit-scrollbar-thumb {
+        background-color: #555;
+        border: 3px solid var(--background);
+      }
+
+      scrollbar-color: #555 var(--background);
     }
-
-    &::-webkit-scrollbar-thumb {
-      background-color: #555;
-      border: 3px solid var(--background);
-    }
-
-    scrollbar-color: #555 var(--background);
   }
 
   // -----------------------------------------------
@@ -90,34 +92,47 @@
   // primar, secondry, warning etc.
   @each $color-name, $scale in COL.$colors {
     @each $shade, $value in $scale {
-      .bg-#{$color-name}-#{$shade} {
-        background-color: var(--#{$color-name}-#{$shade});
-      }
-
       // Automatic text contrast for backgrounds
       // todo: documentaton may add karo issay
       .text-on-#{$color-name}-#{$shade} {
         color: COL.find-text-color($value);
       }
 
-      .text-#{$color-name}-#{$shade} {
+      .text-#{$color-name}-#{$shade},
+      .hover\:text--#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
+      .group:hover .group-hover\:text--#{$color-name}-#{$shade} {
         color: var(--#{$color-name}-#{$shade});
       }
-      .border-#{$color-name}-#{$shade} {
+
+      .bg-#{$color-name}-#{$shade},
+      .hover\:bg-#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
+      .group:hover .group-hover\:bg-#{$color-name}-#{$shade} {
+        background-color: var(--#{$color-name}-#{$shade});
+      }
+
+      .border-#{$color-name}-#{$shade},
+      .hover\:border-#{$color-name}-#{$shade}:hover,
+      .group:hover .group-hover\:border-#{$color-name}-#{$shade} {
         border-color: var(--#{$color-name}-#{$shade});
       }
     }
 
     // Base color classes
-    .bg-#{$color-name} {
+    .text-#{$color-name},
+    .hover\:text--#{$color-name}:hover, // todo: improve these loops to save time
+    .group:hover .group-hover\:text--#{$color-name} {
+      color: var(--#{$color-name});
+    }
+
+    .bg-#{$color-name},
+    .hover\:bg-#{$color-name}:hover, // todo: improve these loops to save time
+    .group:hover .group-hover\:bg-#{$color-name} {
       background-color: var(--#{$color-name});
     }
 
-    .text-#{$color-name} {
-      color: var(--#{$color-name});
-    }
-    
-    .border-#{$color-name} {
+    .border-#{$color-name},
+    .hover\:border-#{$color-name}:hover,
+    .group:hover .group-hover\:border-#{$color-name} {
       border-color: var(--#{$color-name});
     }
   }
@@ -126,32 +141,45 @@
   // green, purple, pink etc. 
   @each $color-name, $scale in COL.$colors-primitives {
     @each $shade, $value in $scale {
-      .bg-#{$color-name}-#{$shade} {
-        background-color: var(--#{$color-name}-#{$shade});
-      }
-
       .text-on-#{$color-name}-#{$shade} {
         color: COL.find-text-color($value);
       }
 
-      .text-#{$color-name}-#{$shade} {
+      .text-#{$color-name}-#{$shade},
+      .hover\:text--#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
+      .group:hover .group-hover\:text--#{$color-name}-#{$shade} {
         color: var(--#{$color-name}-#{$shade});
       }
-      .border-#{$color-name}-#{$shade} {
+
+      .bg-#{$color-name}-#{$shade},
+      .hover\:bg-#{$color-name}-#{$shade}:hover, // todo: improve these loops to save time
+      .group:hover .group-hover\:bg-#{$color-name}-#{$shade} {
+        background-color: var(--#{$color-name}-#{$shade});
+      }
+
+      .border-#{$color-name}-#{$shade},
+      .hover\:border-#{$color-name}-#{$shade}:hover,
+      .group:hover .group-hover\:border-#{$color-name}-#{$shade} {
         border-color: var(--#{$color-name}-#{$shade});
       }
     }
 
     // Base color classes
-    .bg-#{$color-name} {
+    .text-#{$color-name},
+    .hover\:text--#{$color-name}:hover, // todo: improve these loops to save time
+    .group:hover .group-hover\:text--#{$color-name} {
+      color: var(--#{$color-name});
+    }
+
+    .bg-#{$color-name},
+    .hover\:bg-#{$color-name}:hover, // todo: improve these loops to save time
+    .group:hover .group-hover\:bg-#{$color-name} {
       background-color: var(--#{$color-name});
     }
 
-    .text-#{$color-name} {
-      color: var(--#{$color-name});
-    }
-    
-    .border-#{$color-name} {
+    .border-#{$color-name},
+    .hover\:border-#{$color-name}:hover,
+    .group:hover .group-hover\:border-#{$color-name} {
       border-color: var(--#{$color-name});
     }
   }
@@ -173,6 +201,14 @@
     background-color: var(--button-bg-color-hover);
   }
 
+  .bg-white {
+    background-color: white;
+  }
+
+  .bg-black {
+    background-color: black;
+  }
+
   .text-default {
     color: var(--text-primary);
   }
@@ -190,45 +226,12 @@
     color: var(--inverted-text-color);
   }
 
-  .bg-white {
-    background-color: white;
-  }
-
-  .bg-black {
-    background-color: black;
-  }
-
   .text-white {
     color: white;
   }
 
   .text-black {
     color: black;
-  }
-
-  // Hover utilities
-  @each $color-name, $scale in COL.$colors {
-    @each $shade, $value in $scale {
-      .hover\:bg-#{$color-name}-#{$shade}:hover {
-        background-color: var(--#{$color-name}-#{$shade});
-      }
-
-      .hover\:text-#{$color-name}-#{$shade}:hover {
-        color: var(--#{$color-name}-#{$shade});
-      }
-    }
-  }
-
-  @each $color-name, $scale in COL.$colors-primitives {
-    @each $shade, $value in $scale {
-      .hover\:bg-#{$color-name}-#{$shade}:hover {
-        background-color: var(--#{$color-name}-#{$shade});
-      }
-
-      .hover\:text-#{$color-name}-#{$shade}:hover {
-        color: var(--#{$color-name}-#{$shade});
-      }
-    }
   }
 }
 
@@ -238,7 +241,6 @@
   border: 1px solid rgb(255 255 255 / 20%);
 
   @include COL.backdrop-filter(blur(8px));
-
 }
 
 .frosted-glass {
