--- a/src/styles/abstracts/_config.scss
+++ b/src/styles/abstracts/_config.scss
@@ -5,7 +5,7 @@
 $generate-utility-classes: true !default;
 $enable-dark-mode: true !default;
 $enable-rtl: true !default;
-$enable-debuger: false !default;
+$enable-debugger: false !default; // todo: spell mistake
 $enable-reduced-motion: true !default; // todo: pending
 $enable-container-queries: false !default; // todo: pending
 
@@ -118,3 +118,22 @@ $spacings: (
 )  !default;
 
 $percentages: (0, 5, 10, 20, 25, 30, 40, 50, 60, 70, 75, 80, 90, 100) !default;
+
+
+// if just a number passed, it will be assumed as px
+$default-unit: px !default;
+
+// Common border width values that are most useful
+$border-widths: (0, 1, 2, 4, 8) !default;
+
+// Common border radius values that are most useful
+$border-radii: (
+  'xs': 0.25rem,
+  'sm': 0.375rem,
+  'md': 0.5rem,
+  'lg': 0.75rem,
+  'xl': 1rem,
+  '2xl': 1.25rem,
+  'full': 9999px,
+  'none': 0
+) !default;
